--- a/2-1/index.html
+++ b/2-1/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="/img/javascript.svg" />
-    <title>Basic JS exercises</title>
+    <title>Exercicis Basics JS</title>
   </head>
   <body>
-    <h1>Sprint 2 - Basic JavaScript exercises</h1>
-    <nav id="main-menu">
-      <a href="./Ex1/Ex1.html">Exercici 1</a>
-    </nav>
+    <div class="container">
+      <h1>Sprint 2 - Exercicis Bàsics JavaScript</h1>
+      <nav>
+        <ul>
+          <li><a href="./Ex1/Ex1.html">Exercici 1</a></li>
+          <li><a href="./Ex2/Ex2.html">Exercici 2</a></li>
+          <li><a href="./Ex3/Ex3.html">Exercici 3</a></li>
+          <li><a href="./Ex4/Ex4.html">Exercici 4</a></li>
+          <li><a href="./Ex5/Ex5.html">Exercici 5</a></li>
+          <li><a href="./Ex6/Ex6.html">Exercici 6</a></li>
+          <li><a href="./Ex7/Ex7.html">Exercici 7</a></li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
