--- a/2-1/Ex3/Ex3.html
+++ b/2-1/Ex3/Ex3.html
@@ -5,46 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arrow function exercises</title>
     <link rel="stylesheet" href="../styles.css" />
-    <script type="module" src="./Ex1.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
-    <script>hljs.highlightAll();</script>
+    <script type="module" src="./Ex3.js"></script>
   </head>
   <body>
-    <h1>Arrow Function</h1>
+    <h1>Callbacks</h1>
     <article>
-      <h2>Exercici 1.1</h2>
+      <h2>Exercici 3.1</h2>
       <pre>
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-            const add = (a, b) => { return a + b}
+          const processar = (num, callback) => { callback(num)}
         </code>
       </pre>
-      <pre>
-        <h3>Codi d'execució:</h3>
-        <code class="language-javascript">
-          const resultat = add(2, 5)
-          console.log(resultat)
-        </code>
-      </pre>
-      <button id="exercici1-btn">Executar</button>
     </article>
 
     <article>
-      <h2>Exercici 1.2</h2>
+      <h2>Exercici 3.2</h2>
       <pre>
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-            const randomNumber = () => {return Math.floor(Math.random() * 101)}
+          const calculadora = (a, b, callback) => { return callback(a, b)}
+          const add = (a, b) => { return a + b} 
         </code>
       </pre>
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          const resultat = randomNumber()
+          const resultat = calculadora(2, 5, add)
           console.log(resultat)
         </code>
       </pre>
@@ -52,68 +39,65 @@
     </article>
 
     <article>
-      <h2>Exercici 1.3</h2>
+      <h2>Exercici 3.3</h2>
       <pre>
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-            class Person {
-              constructor(name) {
-                this.name = name
-              }
-
-              greet = () => {
-              console.log('Hello, ' + this.name)
-              }
-            }
+          const esperarISaludar = (nom, callback) => {
+          setTimeout(() => {
+              callback(nom)
+            }, 2000)
+          }
+          const saluda = (name) => { console.log(`Hola ${name}`)}
         </code>
       </pre>
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          const joan = new Person("Joan")
-          joan.greet()
+          esperarISaludar('Joan', saluda)
         </code>
       </pre>
       <button id="exercici3-btn">Executar</button>
     </article>
 
     <article>
-      <h2>Exercici 1.4</h2>
+      <h2>Exercici 3.4</h2>
       <pre>
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-          const printNumbers = (numbersArray = []) => {
-            for (let i = 0; i < numbersArray.length; i++) {
-              console.log(numbersArray[i])
-            }
+          const processarElements = (nums = [], callback) => {
+            nums.forEach((num) => {
+              callback(num)
+            })
           }
+          const seguirArray = (num) => { console.log(`El teu nombre és ${num}`)}
         </code>
       </pre>
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          const numbers = [1, 2, 3, 4, 5]
-          printNumbers(numbers)
+          processarElements([2, 4, 6, 8], seguirArray)
         </code>
       </pre>
       <button id="exercici4-btn">Executar</button>
     </article>
 
     <article>
-      <h2>Exercici 1.5</h2>
+      <h2>Exercici 3.5</h2>
       <pre>
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-          const delayedMessage = (message) =>
-            setTimeout(() => {
-              console.log(message)
-            }, 3000)
+          const processarCadena = (paraula, callback) => {
+            const paraulaMaj = paraula.toUpperCase()
+            callback(paraulaMaj)
+          }
+          const ensenyarParaula = (word) => { console.log(`La paraula en majúscules: ${word}`)}
         </code>
       </pre>
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          delayedMessage("3 seconds later...")
+          processarCadena('paraula', ensenyarParaula)
         </code>
       </pre>
       <button id="exercici5-btn">Executar</button>
