--- a/2-1/Ex7/Ex7.html
+++ b/2-1/Ex7/Ex7.html
@@ -6,6 +6,12 @@
     <title>Arrow function exercises</title>
     <link rel="stylesheet" href="../styles.css" />
     <script type="module" src="./Ex7.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
   </head>
   <body>
     <h1>---------------------</h1>
