Ex5 sencer, bases Ex6

--- a/2-1/Ex7/Ex7.html
+++ b/2-1/Ex7/Ex7.html
@@ -14,22 +14,22 @@
     <script>hljs.highlightAll();</script>
   </head>
   <body>
-    <h1>---------------------</h1>
+    <h1>Promises & Async/Await</h1>
     <article>
-      <h2>Exercici 1.7</h2>
+      <h2>Exercici 7.1</h2>
       <pre>
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-            -----------------------------------
+          
         </code>
       </pre>
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          ----------------------------------------
+          
         </code>
       </pre>
-      <button id="exercise-btn">Execute</button>
+      <button id="exercise-btn">Executar</button>
     </article>
   </body>
 </html>
