--- a/2-1/Ex5/Ex5.html
+++ b/2-1/Ex5/Ex5.html
@@ -30,7 +30,7 @@
           console.log(quadratNums)
         </code>
       </pre>
-      <button id="exercise-btn">Execute</button>
+      <button id="exercise-btn">Executar</button>
     </article>
 
     <article>
