Casi tot arreglat, revisar promises

--- a/2-1/Ex4/Ex4.html
+++ b/2-1/Ex4/Ex4.html
@@ -31,7 +31,7 @@
           console.log(array)
         </code>
       </pre>
-      <button id="exercici-btn">Executar</button>
+      <button id="exercici1-btn">Executar</button>
     </article>
 
     <article>
@@ -52,7 +52,7 @@
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           const nums = [1, 2, 3, 4, 5]
-          console.log(add(...nums))
+          console.log(suma(...nums))
         </code>
       </pre>
       <button id="exercici2-btn">Executar</button>
@@ -115,7 +115,7 @@
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          const tresNums = [1, 3, 4]
+          const tresNums = [2, 3, 4]
           console.log(multiplicar3Nums(...tresNums))
         </code>
       </pre>
