--- a/2-1/Ex6/Ex6.html
+++ b/2-1/Ex6/Ex6.html
@@ -32,7 +32,7 @@
           imprimirNoms(noms)
         </code>
       </pre>
-      <button id="exercise-btn">Executar</button>
+      <button id="exercici1-btn">Executar</button>
     </article>
 
     <article>
