--- a/2-1/Ex7/Ex7.html
+++ b/2-1/Ex7/Ex7.html
@@ -33,7 +33,7 @@
           promesaHolaMon.then(missatge => console.log(missatge))
         </code>
       </pre>
-      <button id="exercise-btn">Executar</button>
+      <button id="exercici12-btn">Executar</button>
     </article>
 
     <article>
