--- a/2-1/Ex7/Ex7.html
+++ b/2-1/Ex7/Ex7.html
@@ -20,17 +20,17 @@
       <pre>
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-          const promesaHolaMon = new Promise((resolve) => {
+          const promesaHolaMonFuncio = () => new Promise((resolve) => {
             setTimeout(() => {
                 resolve('Hola, món!');
             }, 2000);
-          });
+          })
         </code>
       </pre>
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          promesaHolaMon.then(missatge => console.log(missatge))
+          promesaHolaMonFuncio().then(missatge => console.log(missatge))
         </code>
       </pre>
       <button id="exercici12-btn">Executar</button>
@@ -55,7 +55,6 @@
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          promesaHola('Adeu').then(missatge => console.log(missatge));
           promesaHola('Hola').then(missatge => console.log(missatge));
         </code>
       </pre>
@@ -68,6 +67,7 @@
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
           const mostraSalutacio = async () => {
+            const promesaHolaMon = promesaHolaMonFuncio();
             const resultat = await promesaHolaMon;
             console.log(resultat);
           }
@@ -89,10 +89,11 @@
         <code class="language-javascript">
           const imprimirSalutacioTryCatch = async () => {
             try {
-                const missatge = await promesaHolaMon;
-                console.log(missatge);
+              const promesaHolaMon = promesaHolaMonFuncio();
+              const missatge = await promesaHolaMon;
+              console.log(missatge);
             } catch (error) {
-                console.error(error);
+              console.error(error);
             }
           }
         </code>
@@ -111,13 +112,13 @@
       <pre>
         <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-          const promesa1 = new Promise((resolve) => {
+          const promesa1 = () => new Promise((resolve) => {
             setTimeout(() => {
                 resolve('Primera promesa resolta');
             }, 2000);
           })
 
-          const promesa2 = new Promise((resolve) => {
+          const promesa2 = () => new Promise((resolve) => {
             setTimeout(() => {
                 resolve('Segona promesa resolta');
             }, 3000);
@@ -127,7 +128,7 @@
       <pre>
         <h3>Codi d'execució:</h3>
         <code class="language-javascript">
-          Promise.all([promesa1, promesa2]).then((resultats) => console.log(resultats))
+          Promise.all([promesa1(), promesa2()]).then((resultats) => console.log(resultats))
         </code>
       </pre>
       <button id="exercici6-btn">Executar</button>
