--- a/2-1/Ex1/Ex1.html
+++ b/2-1/Ex1/Ex1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arrow function exercises</title>
     <link rel="stylesheet" href="../styles.css" />
+    <script type="module" src="../common.js"></script>
     <script type="module" src="./Ex1.js"></script>
     <link
       rel="stylesheet"
@@ -14,17 +15,25 @@
     <script>hljs.highlightAll();</script>
   </head>
   <body>
-    <h1>Arrow Function</h1>
-    <article>
+    <h1><a href="../index.html">Arrow Function</a></h1>
+    <div class="exercici-buttons">
+      <button class="toggle-btn" data-target="ex1">Exercici 1.1</button>
+      <button class="toggle-btn" data-target="ex2">Exercici 1.2</button>
+      <button class="toggle-btn" data-target="ex3">Exercici 1.3</button>
+      <button class="toggle-btn" data-target="ex4">Exercici 1.4</button>
+      <button class="toggle-btn" data-target="ex5">Exercici 1.5</button>
+    </div>
+
+    <article id="ex1" class="exercici exercici-content active">
       <h2>Exercici 1.1</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
             const add = (a, b) => { return a + b}
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           const resultat = add(2, 5)
           console.log(resultat)
@@ -33,16 +42,16 @@
       <button id="exercici1-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex2" class="exercici exercici-content">
       <h2>Exercici 1.2</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
             const randomNumber = () => {return Math.floor(Math.random() * 101)}
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           const resultat = randomNumber()
           console.log(resultat)
@@ -51,10 +60,10 @@
       <button id="exercici2-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex3" class="exercici exercici-content">
       <h2>Exercici 1.3</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
             class Person {
               constructor(name) {
@@ -67,8 +76,8 @@
             }
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           const joan = new Person("Joan")
           joan.greet()
@@ -77,10 +86,10 @@
       <button id="exercici3-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex4" class="exercici exercici-content">
       <h2>Exercici 1.4</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
           const printNumbers = (numbersArray = []) => {
             for (let i = 0; i < numbersArray.length; i++) {
@@ -89,8 +98,8 @@
           }
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           const numbers = [1, 2, 3, 4, 5]
           printNumbers(numbers)
@@ -99,10 +108,10 @@
       <button id="exercici4-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex5" class="exercici exercici-content">
       <h2>Exercici 1.5</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
           const delayedMessage = (message) =>
             setTimeout(() => {
@@ -110,13 +119,17 @@
             }, 3000)
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           delayedMessage("3 seconds later...")
         </code>
       </pre>
       <button id="exercici5-btn">Executar</button>
     </article>
+    <section>
+      <h2>Sortida de consola</h2>
+      <div id="console-block" class="console-block"></div>
+    </section>
   </body>
 </html>
