--- a/2-1/Ex4/Ex4.html
+++ b/2-1/Ex4/Ex4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arrow function exercises</title>
     <link rel="stylesheet" href="../styles.css" />
+    <script type="module" src="../common.js"></script>
     <script type="module" src="./Ex4.js"></script>
     <link
       rel="stylesheet"
@@ -14,19 +15,29 @@
     <script>hljs.highlightAll();</script>
   </head>
   <body>
-    <h1>Rest & Spread Operators</h1>
-    <article>
+    <h1><a href="../index.html">Rest & Spread Operators</a></h1>
+
+    <div class="exercici-buttons">
+      <button class="toggle-btn" data-target="ex1">Exercici 4.1</button>
+      <button class="toggle-btn" data-target="ex2">Exercici 4.2</button>
+      <button class="toggle-btn" data-target="ex3">Exercici 4.3</button>
+      <button class="toggle-btn" data-target="ex4">Exercici 4.4</button>
+      <button class="toggle-btn" data-target="ex5">Exercici 4.5</button>
+      <button class="toggle-btn" data-target="ex6">Exercici 4.6</button>
+    </div>
+
+    <article id="ex1" class="exercici exercici-content active">
       <h2>Exercici 4.1</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
-            const array1 = [1, 3, 5, 7, 9]
-            const array2 = [2, 4, 6, 8, 10]
-            const array = [...array1, ...array2]
+          const array1 = [1, 3, 5, 7, 9]
+          const array2 = [2, 4, 6, 8, 10]
+          const array = [...array1, ...array2]
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           console.log(array)
         </code>
@@ -34,10 +45,10 @@
       <button id="exercici1-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex2" class="exercici exercici-content">
       <h2>Exercici 4.2</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
           const suma = (...array) => {
             let total = 0
@@ -48,8 +59,8 @@
           }
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           const nums = [1, 2, 3, 4, 5]
           console.log(suma(...nums))
@@ -58,10 +69,10 @@
       <button id="exercici2-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex3" class="exercici exercici-content">
       <h2>Exercici 4.3</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
           const quadrat = {
             costat: '2',
@@ -72,8 +83,8 @@
           quadrat2.costat = '3'
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           console.log(quadrat)
           console.log(quadrat2)
@@ -82,17 +93,17 @@
       <button id="exercici3-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex4" class="exercici exercici-content">
       <h2>Exercici 4.4</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
           const noms = ['Joan', 'Judit', 'Xavi', 'Manel', 'Pumba']
           const [nom1, nom2, ...altresNoms] = noms
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           console.log(`Primer nom: ${nom1}`)
           console.log(`Segon nom: ${nom2}`)
@@ -102,18 +113,18 @@
       <button id="exercici4-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex5" class="exercici exercici-content">
       <h2>Exercici 4.5</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
           const multiplicar3Nums = (a, b, c) => {
             return a * b * c
           }
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           const tresNums = [2, 3, 4]
           console.log(multiplicar3Nums(...tresNums))
@@ -122,10 +133,10 @@
       <button id="exercici5-btn">Executar</button>
     </article>
 
-    <article>
+    <article id="ex6" class="exercici exercici-content">
       <h2>Exercici 4.6</h2>
+      <h3>Declaració de la funció:</h3>
       <pre>
-        <h3>Declaració de la funció:</h3>
         <code class="language-javascript">
           const quadre = {
             nom: 'Nit estrellada',
@@ -138,13 +149,18 @@
           const nitEstrellada = { ...quadre, ...marc }
         </code>
       </pre>
+      <h3>Codi d'execució:</h3>
       <pre>
-        <h3>Codi d'execució:</h3>
         <code class="language-javascript">
           console.log(nitEstrellada)
         </code>
       </pre>
       <button id="exercici6-btn">Executar</button>
     </article>
+
+    <section>
+      <h2>Sortida de consola</h2>
+      <div id="console-block" class="console-block"></div>
+    </section>
   </body>
 </html>
