--- a/2-1/index.html
+++ b/2-1/index.html
@@ -9,17 +9,36 @@
   <body>
     <div class="container">
       <h1>Sprint 2 - Exercicis Bàsics JavaScript</h1>
-      <nav>
-        <ul>
-          <li><a href="./Ex1/Ex1.html">Exercici 1</a></li>
-          <li><a href="./Ex2/Ex2.html">Exercici 2</a></li>
-          <li><a href="./Ex3/Ex3.html">Exercici 3</a></li>
-          <li><a href="./Ex4/Ex4.html">Exercici 4</a></li>
-          <li><a href="./Ex5/Ex5.html">Exercici 5</a></li>
-          <li><a href="./Ex6/Ex6.html">Exercici 6</a></li>
-          <li><a href="./Ex7/Ex7.html">Exercici 7</a></li>
-        </ul>
-      </nav>
+      <div class="cards-container">
+        <div class="card">
+          <h2>Exercici 1</h2>
+          <a class="button" href="./Ex1/Ex1.html">Veure exercici</a>
+        </div>
+        <div class="card">
+          <h2>Exercici 2</h2>
+          <a class="button" href="./Ex2/Ex2.html">Veure exercici</a>
+        </div>
+        <div class="card">
+          <h2>Exercici 3</h2>
+          <a class="button" href="./Ex3/Ex3.html">Veure exercici</a>
+        </div>
+        <div class="card">
+          <h2>Exercici 4</h2>
+          <a class="button" href="./Ex4/Ex4.html">Veure exercici</a>
+        </div>
+        <div class="card">
+          <h2>Exercici 5</h2>
+          <a class="button" href="./Ex5/Ex5.html">Veure exercici</a>
+        </div>
+        <div class="card">
+          <h2>Exercici 6</h2>
+          <a class="button" href="./Ex6/Ex6.html">Veure exercici</a>
+        </div>
+        <div class="card">
+          <h2>Exercici 7</h2>
+          <a class="button" href="./Ex7/Ex7.html">Veure exercici</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
