Sticky button, i resolució dels issues

--- a/2-1/Ex1/Ex1.html
+++ b/2-1/Ex1/Ex1.html
@@ -131,5 +131,8 @@
       <h2>Sortida de consola</h2>
       <div id="console-block" class="console-block"></div>
     </section>
+    <a class="sticky-button" href="../index.html">
+      <img src="../images/home.svg" alt="Home">
+    </a>
   </body>
 </html>
