--- a/2-1/Ex2/Ex2.html
+++ b/2-1/Ex2/Ex2.html
@@ -122,7 +122,7 @@
       <pre>
         <code class="language-javascript">
           const parOImpar = (nums = []) => {
-            for (let i = 0; i < numbers.length; i++) {
+            for (let i = 0; i < nums.length; i++) {
               const message = `El valor a la posició ${i} de l'array és ${nums[i]}, és un nombre `
               nums[i] % 2 == 0
                 ? console.log(message + 'parell')
@@ -144,5 +144,8 @@
       <h2>Sortida de consola</h2>
       <div id="console-block" class="console-block"></div>
     </section>
+    <a class="sticky-button" href="../index.html">
+      <img src="../images/home.svg" alt="Home">
+    </a>
   </body>
 </html>
